# transcriptor

./: README.md  init-project.sh  pyproject.toml  run.sh
transcriptor/: main.py  whisper.py
