[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor"
version = "0.1.0"
description = "Transcribe speech to text with a small GUI"
authors = [
    { name="Bruno Schilling", email="bruno.schilling@protonmail.ch" }
]
license = "MIT" 
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
