[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor"
version = "0.1.0"
description = "Transcribe speech to text with a small GUI"
authors = [
    { name="Bruno Schilling", email="bruno.schilling@protonmail.ch" }
]
license = "MIT" 
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"peng_ui>=0.3.1",
	"sounddevice>=0.5",
	"numpy>=2.1"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
